ajust in responsive

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         </div>   
     </section>
     
-    <footer>
+    <footer class="line-footer">
         <p class="text-footer">&copy; Feito com </p>
         <img class="heart" src="./img/coracao.png" alt="coração">
         <p class="text-footer"> por Kelver Alves </p>
