--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <title>Meu Portifólio</title>
 </head>
 <body>
@@ -78,14 +78,14 @@
         </div>
     </section>
 
-    <section class="line3" id="habilit">
+    <div class="line3" id="habilit">
         <div class="box">
-            <h3>Habilidades</h3>
+            <h3 class="hab">Habilidades</h3>
             <p> Ser um desenvolvedor Full Stack requer uma ampla gama de habilidades 
                 desde a criação de interfaces de usuário atraentes até a implementação de soluções de back-end complexas. Entre as habilidades necessárias estão a capacidade de trabalhar com várias linguagens de programação, como JavaScript, HTML, CSS, Python além de ter conhecimentos em frameworks populares, como React, Node.js Django.
             </p>
         </div>
-    </section>
+    </div>
 
     <section class="habilities">
     
@@ -183,9 +183,9 @@
         </div>
     </section>
 
-    <section class="line4" id="contact">
+    <section class="line3" id="contact">
         <div class="box-contact">
-            <h3>Contatos</h3>
+            <h3 class="cont">Contatos</h3>
         </div>
     </section>
 
